--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.mass{
+max-width: 800px;
+margin: 0 auto;
+color: deepskyblue;
+font-family: calibri;
+padding-top: 50px;
+padding-left: 20px;
+padding-right: 20px;
+}
