[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -22,7 +22,7 @@ body {
 .mass{
 max-width: 800px;
 margin: 0 auto;
-color: deepskyblue;
+color: darkgreen;
 font-family: calibri;
 padding-top: 50px;
 padding-left: 20px;
